--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
   flex-direction: column;
   height: 400px;
   width: 400px;
-  margin: auto;
+  margin: 200px auto 0 auto;
 }
 
 #display {
